allow admin to set float prices and fix spacing of product divs again

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,5 +21,5 @@
 }
 
 .col {
-  height: 300px;
+  height: 500px;
 }
